objects/BMCServiceDesk__SYSPopupObjectFields__c.object
<CustomObject>
    <description>This object allows you to store data for the fields in pop-ups.</description>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__dataType__c</fullName>
        <description>Data types supported by EXTJS grid component data loader and will be used for sorting</description>
        <inlineHelpText>Data types supported by EXTJS grid component data loader and will be used for sorting</inlineHelpText>
        <label>Data Type</label>
        <picklist>
            <picklistValues>
                <fullName>String</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>integer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>float</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__fieldOrder__c</fullName>
        <defaultValue>999</defaultValue>
        <label>Field Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__fieldWidth__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Field Width</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__popupObjectId__c</fullName>
        <label>FKPopupObject</label>
        <referenceTo>BMCServiceDesk__SYSPopupObject__c</referenceTo>
        <relationshipLabel>SYSPopupObjectFields</relationshipLabel>
        <relationshipName>PopupObjectFields</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Popup Details</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Field API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SYSPopupObjectFields</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>